tests/integration/features/diff/--generate-diff/_validations/02_invalid_git_revision/test.itest
#
# @relation(SDOC-SRS-111, scope=file)
#

RUN: cp %S/strictdoc_config.py %T/
RUN: git init
RUN: git config user.name "Your Name"
RUN: git config user.email "you@example.com"
RUN: git config user.email "you@example.com"
RUN: cp %S/lhs/input.sdoc %T/
RUN: git add .
RUN: git commit -m "Test commit #1"
RUN: cp %S/rhs/input.sdoc %T/
RUN: git add .
RUN: git commit -m "Test commit #2"
RUN: %expect_exit 1 %strictdoc export %T --generate-diff-git "FOO..BAR" --output-dir %T/output | filecheck %s

CHECK: error: Non-existing Git revision: FOO.
